# Critik

./: .gitignore  AUDIT.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
action/: action.yml
critik/: __init__.py  ai.py  baseline.py  cli.py  custom_rules.py  explain.py  hooks.py  ignores.py  init.py  models.py  scanner.py  watch.py
critik/checks/: __init__.py  auth.py  config.py  dotenv.py  frameworks.py  injection.py  secrets.py
critik/formatters/: fix_prompts.py  json_fmt.py  sarif.py  terminal.py
evals/critik/: README.md  labels.py  results.json  run_evals.py
evals/critik/corpus/clean/: .env.example  clean_config.js  clean_firebase_rules.json  clean_injection.py  clean_nextjs_api.ts  clean_nosql.js  clean_secrets.py  clean_supabase.ts  clean_utils.py
evals/critik/corpus/vulnerable/: bad_config.js  bad_firebase_rules.json  bad_nosql.js  bad_secrets.py  bad_supabase.ts
examples/: github-action.yml
examples/rules/: supabase.yml
launch/: audit-findings.md  devto_article.md  outreach-emails.md  ph-launch.md  writeup-draft.md
tests/: conftest.py  test_ai.py  test_auth.py  test_baseline.py  test_cli.py  test_custom_rules.py  test_dotenv.py  test_explain.py  test_frameworks.py  test_init.py  test_injection.py  test_secrets.py
tests/fixtures/: bad_dotenv.env  bad_injection.py  bad_nextjs_api.ts
vibecheck/: __init__.py  ai.py  baseline.py  cli.py  custom_rules.py  explain.py  hooks.py  ignores.py  init.py  models.py  scanner.py  watch.py
vibecheck/checks/: __init__.py  auth.py  config.py  dotenv.py  frameworks.py  injection.py  secrets.py
vibecheck/formatters/: fix_prompts.py  json_fmt.py  sarif.py  terminal.py
vscode-extension/: .gitignore  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts  scanner.ts
